Finished abstract and thesis.

--- a/main.tex
+++ b/main.tex
@@ -19,7 +19,7 @@
 \newcommand*{\getSupervisor}{Prof.\ Dr.\ Claudia Eckert}
 \newcommand*{\getAdvisor}{M. Sc. Pascal Debus / M. Sc. Kilian Tscharke}
 \newcommand*{\getSubmissionDate}{October 31st, 2024}
-\newcommand*{\getSubmissionLocation}{Munich}
+\newcommand*{\getSubmissionLocation}{Garching}
 
 \begin{document}
 
