--- a/bibliography.bib
+++ b/bibliography.bib
@@ -6,7 +6,7 @@
 	abstract = {Quantum mechanics, the subfield of physics that describes the behavior of very small (quantum) particles, provides the basis for a new paradigm of computing. First proposed in the 1980s as a way to improve computational modeling of quantum systems, the field of quantum computing has recently garnered significant attention due to progress in building small-scale devices. However, significant technical advances will be required before a large-scale, practical quantum computer can be achieved. Quantum Computing: Progress and Prospects provides an introduction to the field, including the unique characteristics and constraints of the technology, and assesses the feasibility and implications of creating a functional quantum computer capable of addressing real-world problems. This report considers hardware and software requirements, quantum algorithms, drivers of advances in quantum computing and quantum devices, benchmarks associated with relevant use cases, the time and resources required, and how to assess the probability of success.},
 	pagetotal = {273},
 	publisher = {National Academies Press},
-	author = {National Academies of Sciences, Engineering, \{and\} Medicine},
+	author = {National Academies of Sciences, Engineering, and Medicine},
 	date = {2019-03-27},
 	langid = {english},
 	note = {Google-Books-{ID}: {ATH}3DwAAQBAJ},
